--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "autoprefixer": "^7.1.6",
+    "autoprefixer": "^8.1.0",
     "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -14,20 +14,20 @@
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.7",
     "gulp": "^3.9.1",
-    "jest-expo": "^22.0.0",
+    "jest-expo": "^25.1.0",
     "json-loader": "^0.5.7",
-    "node-sass": "^4.7.2",
-    "react-native-scripts": "1.7.0",
-    "react-test-renderer": "16.0.0-beta.5",
+    "node-sass": "^4.8.2",
+    "react-native-scripts": "1.11.1",
+    "react-test-renderer": "16.2.0",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.5.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.4",
+    "style-loader": "^0.20.3",
+    "webpack": "^4.1.1",
+    "webpack-dev-server": "^3.1.1",
     "webpack-hot-middleware": "^2.20.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^6.2.2",
+    "axios": "^0.18.0",
     "babel": "^6.23.0",
     "babel-eslint": "^8.0.2",
     "babel-polyfill": "^6.26.0",
@@ -55,7 +56,7 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.5.1",
-    "expo": "^22.0.2",
+    "expo": "^25.0.0",
     "firebase": "^4.8.0",
     "morgan": "^1.9.0",
     "native-base": "^2.3.5",
@@ -63,8 +64,9 @@
     "prop-types": "^15.6.0",
     "react": "^16.0.0-beta.5",
     "react-dom": "^16.2.0",
-    "react-native": "^0.49.5",
+    "react-native": "0.52.0",
     "react-native-router-flux": "^4.0.0-beta.24",
+    "react-native-search-bar": "^3.4.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "reactstrap": "^5.0.0-alpha.4",
