--- a/app.json
+++ b/app.json
@@ -1,9 +1,15 @@
 {
   "expo": {
+    "name": "VitamixApp",
+    "icon": "./src/images/app-icon.png",
+    "version": "1.0.0",
+    "slug": "VitamixApp",
     "sdkVersion": "25.0.0",
-    "name": "React Native Starter Kit",
-    "slug": "react-native-starter-kit",
-    "icon": "src/images/app-icon.png",
-    "privacy": "public"
+    "ios": {
+      "bundleIdentifier": "com.oracle.vitamixapp"
+    },
+    "android": {
+      "package": "com.oracle.vitamixapp"
+    }
   }
 }
