--- a/package.json
+++ b/package.json
@@ -62,11 +62,13 @@
     "native-base": "^2.3.5",
     "object-assign": "^4.1.1",
     "prop-types": "^15.6.0",
-    "react": "^16.0.0-beta.5",
+    "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-native": "0.52.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
+    "react-native-elements": "^0.19.0",
     "react-native-router-flux": "^4.0.0-beta.24",
     "react-native-search-bar": "^3.4.0",
+    "react-native-svg-charts": "^4.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "reactstrap": "^5.0.0-alpha.4",
